--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="SkillShare Hub - Learn and Share Skills"
-    />
-    <!-- ❌ Đảm bảo KHÔNG có meta CSP ngăn nhúng iframe -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SkillShare Hub</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-
-    <!-- ✅ Thêm script Jitsi ở đây -->
-    <script src="https://meet.jit.si/external_api.js"></script>
-  </body>
+<head>
+<meta charset="utf-8" />
+<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="theme-color" content="#000000" />
+<meta
+name="description"
+content="SkillShare Hub - Learn and Share Skills"
+/>
+<!-- ✅ FIXED CSP: Allow localhost for development -->
+<meta
+http-equiv="Content-Security-Policy"
+content="
+ default-src 'self';
+ script-src 'self' 'unsafe-inline' 'unsafe-eval' https://meet.jit.si https://js.stripe.com https://accounts.google.com;
+ style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com;
+ font-src 'self' https://fonts.gstatic.com;
+ frame-src 'self' https://meet.jit.si https://js.stripe.com https://accounts.google.com;
+ connect-src 'self' http://localhost:3000 ws://localhost:3000 wss://localhost:3000 http://localhost:3004 ws://localhost:3004 wss://localhost:3004 https://your-api-domain.com wss://your-api-domain.com https://meet.jit.si wss://meet.jit.si https://api.stripe.com https://accounts.google.com;
+ img-src 'self' data: https://*.stripe.com https://lh3.googleusercontent.com https://images.unsplash.com https://res.cloudinary.com;
+ "
+/>
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<title>SkillShare Hub</title>
+<!-- Google Fonts -->
+<link
+href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+rel="stylesheet"
+/>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+<!-- Jitsi API -->
+<script src="https://meet.jit.si/external_api.js"></script>
+</body>
 </html>
