--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,36 +9,41 @@
 name="description"
 content="SkillShare Hub - Learn and Share Skills"
 />
-<!-- ✅ FIXED CSP: Allow localhost for development -->
+<!-- ✅ FIXED CSP: Allow Stripe properly -->
 <meta
   http-equiv="Content-Security-Policy"
   content="
-    default-src 'self';
+    default-src 'self' data: blob:;
     script-src 'self' 'unsafe-inline' 'unsafe-eval' 
+      https://js.stripe.com
       https://meet.jit.si https://8x8.vc 
       https://*.jit.si https://*.8x8.vc
-      https://js.stripe.com
       https://accounts.google.com;
     style-src 'self' 'unsafe-inline' 
       https://fonts.googleapis.com 
       https://accounts.google.com
-      https://meet.jit.si https://8x8.vc;
-    font-src 'self' https://fonts.gstatic.com;
+      https://meet.jit.si https://8x8.vc
+      https://js.stripe.com;
+    font-src 'self' data: https://fonts.gstatic.com;
     frame-src 'self' 
+      https://js.stripe.com
+      https://hooks.stripe.com
+      https://checkout.stripe.com
       https://meet.jit.si https://8x8.vc 
       https://*.jit.si https://*.8x8.vc
       https://web-cdn.jitsi.net;
     connect-src 'self' 
       http://localhost:3000 ws://localhost:3000 wss://localhost:3000 
       http://localhost:3004 ws://localhost:3004 wss://localhost:3004 
-      https://your-api-domain.com wss://your-api-domain.com 
+      https://api.stripe.com
+      https://checkout.stripe.com
       https://meet.jit.si wss://meet.jit.si 
       https://8x8.vc wss://8x8.vc
       https://*.jit.si wss://*.jit.si
-      https://*.8x8.vc wss://*.8x8.vc
-      https://api.stripe.com;
+      https://*.8x8.vc wss://*.8x8.vc;
     img-src 'self' data: blob:
       https://*.stripe.com 
+      https://q.stripe.com
       https://lh3.googleusercontent.com 
       https://images.unsplash.com 
       https://res.cloudinary.com
@@ -62,5 +67,7 @@ rel="stylesheet"
 <div id="root"></div>
 <!-- Jitsi API -->
 <script src="https://meet.jit.si/external_api.js"></script>
+<!-- Stripe.js -->
+<script src="https://js.stripe.com/v3/"></script>
 </body>
 </html>
