--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,6 +35,7 @@ content="SkillShare Hub - Learn and Share Skills"
     connect-src 'self' 
       http://localhost:3000 ws://localhost:3000 wss://localhost:3000 
       http://localhost:3004 ws://localhost:3004 wss://localhost:3004 
+      http://localhost:8000 ws://localhost:8000 wss://localhost:8000
       https://api.stripe.com
       https://checkout.stripe.com
       https://meet.jit.si wss://meet.jit.si 
@@ -53,6 +54,7 @@ content="SkillShare Hub - Learn and Share Skills"
     worker-src 'self' blob:;
   "
 />
+
 <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 <title>SkillShare Hub</title>
